fixed the bug that didn't allow the header's background image stay fixed when displayed on firefox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,6 @@ html {
   background-position: top center;
   background-size: cover;
   background-attachment: fixed;
-  transform: rotate(0deg);
   color: #000;
   text-decoration: none;
   padding-right: 20px;
